fix: text align issue on OS

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -159,7 +159,7 @@ header {
     font-weight: 400;
     line-height: 35.14px;
     margin:5px;
-    padding: 0px 20px 5px 20px;
+    padding: 0px 20px 0px 20px;
     z-index: 0;
     display: flex;
     align-items: center;
@@ -220,7 +220,7 @@ header {
     line-height: 34.15px;
     margin:5px;
     background-color: #EF4444;
-    padding: 0px 20px 5px 20px;
+    padding: 0px 20px 0px 20px;
     display: flex;
     align-items: center;
     white-space: nowrap;
@@ -341,10 +341,11 @@ header {
     display: flex;
     flex-direction: column;
     align-items: self-end;
-    .solar-img{
-        width: 120%;
-        margin-left: -10%;
-    }
+    
+}
+.solar-img{
+    width: 120%;
+    margin-left: -10%;
 }
 .support-container{
     display: flex;
@@ -377,9 +378,10 @@ header {
     align-items: flex-start;
     justify-content: center;
     width: 50%;
-    p{
-        text-align: left;
-    }
+    
+}
+.about-title > p{
+    text-align: left;
 }
 
 .about-title-layout {
@@ -469,13 +471,13 @@ a:hover {
 }
 .solar-container{
     position: relative;
-    .fox-img{
-        position: absolute;
-        width: 100%;
-        top: 50%;
-        left: 55%;
-        transform: translate(-50%, -50%);
-    }
+}
+.solar-container > .fox-img{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%);
 }
 .blink {
     animation: opacity-animation 2s infinite;
